# bookshelf

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  conftest.py  gh-issue-simplify-publishing.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  setup.cfg  sitemap.xml  versions.json
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci.yaml  deploy.yaml  docs-dev.yaml  docs-release.yaml  install-pypi.yaml  release.yaml
.gitlab/: release_template.md
.gitlab/issue_templates/: Bug.md  Feature_Request.md  New_Book.md  default.md
.gitlab/merge_request_templates/: Default.md  General.md  New Book.md
0.3/: 404.html
0.3/NAVIGATION/: index.html
0.3/api/bookshelf/: index.html
0.3/api/bookshelf_producer/: index.html
0.3/configuration/: index.html
0.3/development/: index.html
0.3/getting_started/: index.html
0.3/how-to-guides/: index.html
0.3/how-to-guides/create_a_new_volume/: index.html
0.3/how-to-guides/find_all_books/: index.html
0.3/tutorials/: index.html
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/NAVIGATION/: index.html
0.4/api/NAVIGATION/: index.html
0.4/api/bookshelf/: index.html
0.4/api/bookshelf_producer/: index.html
0.4/changelog/: index.html
0.4/configuration/: index.html
0.4/development/: index.html
0.4/explanation/: index.html
0.4/getting_started/: index.html
0.4/how-to-guides/: index.html
0.4/how-to-guides/analysis_with_a_book/: index.html
0.4/how-to-guides/create_a_new_volume/: create_a_new_volume.py  index.html
0.4/how-to-guides/find_all_books/: index.html
0.4/search/: search_index.json
0.4/tutorials/: index.html
NAVIGATION/: index.html
api/NAVIGATION/: index.html
api/bookshelf/: index.html
api/bookshelf/book/: index.html
api/bookshelf/constants/: index.html
api/bookshelf_producer/: index.html
changelog/: 1.improvement.md  107.trivial.md  108.improvement.md  109.feature.md  110.improvement.md  111.improvement.md  112.improvement.md  113.trivial.md  114.docs.md  117.trivial.md  123.feature.md  126.trivial.md  127.feature.md  129.trivial.md  135.deprecation.md  32.fix.md  34.feature.md  34.improvement.md  35.feature.md  36.improvement.md  38.feature.md  39.fix.md  40.fix.md  41.docs.md  42.feature.md  43.feature.md  45.feature.md  47.fix.md  48.feature.md  49.feature.md  50.feature.md  51.fix.md  53.feature.md  55.trivial.md  56.feature.md  58.feature.md  59.feature.md  60.improvement.md  61.docs.md  62.improvement.md  (+7 more)
configuration/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/NAVIGATION/: index.html
dev/changelog/: changelog.md  index.html
dev/configuration/: configuration.md  index.html
dev/development/: index.html
dev/explanation/: index.html
dev/getting_started/: index.html
dev/how-to-guides/: index.html
dev/search/: search_index.json
dev/stylesheets/: style.css
dev/tutorials/: index.html
development/: development.md  index.html
docs/: NAVIGATION.md  changelog.md  configuration.md  development.md  explanation.md  gen_doc_stubs.py  getting_started.md  index.md  resource-types.md
docs/how-to-guides/: create_a_new_volume.py  index.md  working_with_dataframes.py
docs/source/: analysis_with_a_book.md  changelog.md  conf.py  configuration.rst  create_a_new_volume.md  development.md  find_all_books.md  getting_started.md  index.md  index.rst  installation.md  installation.rst  notebooks.md  usage.md  usage.rst
explanation/: index.html
getting_started/: index.html
how-to-guides/: index.html
how-to-guides/analysis_with_a_book/: index.html
how-to-guides/create_a_new_volume/: index.html
how-to-guides/find_all_books/: index.html
latest/: 404.html  index.html  sitemap.xml
latest/NAVIGATION/: index.html
latest/changelog/: changelog.md  index.html
latest/configuration/: index.html
latest/development/: index.html
latest/explanation/: index.html
latest/getting_started/: index.html
latest/how-to-guides/: index.html
latest/search/: search_index.json
latest/tutorials/: index.html
notebooks/: README.md  ceds.py  ceds.yaml  example.py  example.yaml  primap-hist.py  primap-hist.yaml  rcmip-emissions.py  rcmip-emissions.yaml  un-wpp.py  un-wpp.yaml  wdi.py  wdi.yaml
notebooks/IEA/: IEA.py  IEA.yaml
notebooks/cat/: cat.py  cat.yaml
notebooks/ceds/: ceds.py  ceds.yaml
notebooks/example_volume/: example_volume.py  example_volume.yaml
notebooks/gdp-ndc-tool/: 13Mar2023a_CR_gdp_results.csv  gdp-ndc-tool.py  gdp-ndc-tool.yaml
notebooks/iea/: iea.py  iea.yaml
notebooks/imf-weo/: imf-weo.py  imf-weo.yaml
notebooks/long_format/: long_format.yaml
notebooks/ndcs-cr/: ndcs-cr.py  ndcs-cr.yaml
notebooks/ndcs-pbl/: ndcs-pbl.py  ndcs-pbl.yaml
notebooks/ngfs/: ngfs.py  ngfs.yaml
notebooks/ngfs-emissions/: ngfs-emissions.py  ngfs-emissions.yaml
notebooks/pbl/: pbl.py  pbl.yaml
notebooks/primap-hist/: primap-hist.py  primap-hist.yaml
notebooks/primap-ssp-downscaled/: primap-ssp-downscaled.py  primap-ssp-downscaled.yaml
notebooks/rcmip-emissions/: rcmip-emissions.py  rcmip-emissions.yaml
notebooks/ssp-basic-elements/: ssp-basic-elements.py  ssp-basic-elements.yaml
notebooks/un-br-ctf/: un-br-ctf.py  un-br-ctf.yaml
notebooks/un-wpp/: un-wpp.py  un-wpp.yaml
notebooks/wb-population/: README.md  wb-population.py  wb-population.yaml
notebooks/wdi/: README.md  wdi.py  wdi.yaml
scripts/: changelog-to-release-template.py  get-version.py  run-notebook.py  set-release-version.py  test-install.py  utils.py
search/: search_index.json
src/bookshelf/: __init__.py  book.py  cli.py  constants.py  dataset_structure.py  errors.py  notebook.py  schema.py  shelf.py  utils.py
tests/: conftest.py
tests/integration/: test_simple.py
tests/notebooks/: test_notebooks.py  test_primap.py
tests/unit/: conftest.py  test_book.py  test_cli.py  test_data_structure.py  test_notebook.py  test_schema.py  test_shelf.py  test_utils.py
tutorials/: index.html  tutorials.md
(+198 files in other folders)
