[tool.poetry]
name = "bookshelf"
version = "0.2.3"
description = "A collection of curated climate data sets"
authors = ["Jared Lewis <jared.lewis@climate-resource.com>"]
readme = "README.md"
packages = [{include = "bookshelf", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.9"
click = ">8"
click-log = "*"
scmdata = ">=0.14.2"
urllib3 = "<2"
boto3 = "*"
pooch = "*"
pydantic = "^1.10.7"
appdirs = "*"
python-dotenv = "*"
pycountry = "*"
datapackage = "^1.15.2"
pyyaml = "*"

[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"
requests-mock = "^1.11.0"
moto = {extras = ["s3"], version = "^4.1.12"}

[tool.poetry.group.docs.dependencies]
myst-nb = "^0.17.0"
sphinx-rtd-theme = "^1.2.0"
sphinx-autodoc-typehints = "^1.23.0"
sphinx-autodocgen = "^1.3"
jupytext = "^1.14.5"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.stubs.dependencies]
boto3-stubs = {version="*", extras=["essential"]}
types-appdirs = "*"
types-requests = "*"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
coverage = "^7.2.0"
black = "23.3.0"
blackdoc = "0.3.8"
mypy = "^1.2.0"
ruff = "0.0.264"
pre-commit = "^3.3.1"
towncrier = "^23.6.0"
liccheck = "^0.9.1"

[tool.poetry.group.notebooks.dependencies]
notebook = "^6.5.4"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
papermill = "^2.4.0"
jupytext = "^1.14.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = [
    'py39',
    'py310',
    'py311',
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 90
skip_empty = true
show_missing = true
# Regexes for lines to exclude from consideration in addition to the defaults
exclude_also = [
    # Don't complain about missing type checking code:
    "if TYPE_CHECKING",
]

[tool.mypy]
strict = true
# prevent unimported libraries silently being treated as Any
#disallow_any_unimported = true
# show error codes on failure with context
show_error_codes = true
show_error_context = true
# warn if code can't be reached
warn_unreachable = true
# importing following uses default settings
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "scmdata",
    "pooch",
    "jupytext",
    "papermill",
    "click_log",
    "datapackage"
]
ignore_missing_imports = true

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
src = ["src"]
target-version = "py39"
select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
ignore = [
    "D105",  # Missing docstring in magic method
    "D200",  # One-line docstring should fit on one line with quotes
    "D400",  # First line should end with a period
    "TRY003",  # Avoid specifying long messages outside the exception class
]
# Provide some leeway for long docstring, this is otherwise handled by black
line-length = 110

[tool.ruff.per-file-ignores]
"test*.py" = [
    "D",  # Documentation not needed in tests
    "S101",  # S101 Use of `assert` detected
    "PLR2004" # Magic value used in comparison
]
"docs/source/notebooks/*" = [
    "D100",  # Missing docstring at the top of file
    "E402",  # Module level import not at top of file
    "S101",  # Use of `assert` detected
]
"notebooks/*" = [
    "D100",  # Missing docstring at the top of file
    "D103",  # Missing docstring in public function
    "E402",  # Module level import not at top of file
    "S101",  # Use of `assert` detected
    "PD901",  # `df` is a bad variable name.
]
"scripts/*" = [
    "S101" # S101 Use of `assert` detected
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.towncrier]
package = "bookshelf"
package_dir = "src"
filename = "docs/source/changelog.md"
directory = "changelog/"
title_format = "## bookshelf {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://gitlab.com/climate-resource/bookshelf/bookshelf/-/merge_requests/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = false

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "bsd license",
    "BSD 3-Clause",
    "CC0",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "Apache License, Version 2.0",
    "Historical Permission Notice and Disclaimer (HPND)",
    "isc license",
    "isc license (iscl)",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "LGPLv2+",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation",
    "python software foundation license",
    "zpl 2.1",
]
# This starting list is relatively conservative. Depending on the project, it
# may make sense to move some of these into the authorized list
unauthorized_licenses = [
    "agpl",
    "gnu agpl",
    "gpl v3",
    "gplv3",
    "gpl v2",
    "gplv2",
    "gpl v1",
    "gplv1",
]
