[metadata]
name = bookshelf
keywords = data management, climate
author = Jared Lewis
author_email = jared.lewis@climate-rescource.com
license = No License

description = A tool for producing a coherent set of emissions including H2
description_file = README.rst
long_description_content_type = text/x-rst
long_description =
    bookshelf
    =========

    ``bookshelf`` is how Climate Resource reuses datasets across projects


    The ``bookshelf`` represents a shared collection of curated datasets or ``Books``. Each
    ``Book`` is a preprocessed, versioned dataset including the notebooks used to produce it.
    These `Book``s can then be deployed to the ``Bookshelf`` so that they are accessible by
    other users.

url = https://gitlab.com/climate-resource/bookshelf
# full list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    click
    scmdata>=0.14.0
    pooch
    boto3
    importlib-metadata; python_version < '3.8'
    papermill
    matplotlib
    scipy
    jupytext
    pydantic
    datapackage

[options.packages.find]
where = src

[options.extras_require]
notebooks =
    ipywidgets
    notebook
    seaborn
    python-dotenv

tests =
    codecov
    coverage
    nbval
    pytest-cov
    requests_mock
    pytest>=4.0
    moto[s3]

dev =
    bandit
    # Also update black, isort and flake8 versions in precommit hook
    black == 22.3.0
    flake8 == 4.0.1
    isort == 5.5.2
    mypy
    nbdime
    pydocstyle
    pylint >= 2.4.4
    %(notebooks)s
    %(tests)s


[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = bookshelf
profile = black

[mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[pydocstyle]
# D213 - Multi-line docstring summary should start at the second line
# D402 - First line should not be the signature of the function
add_select = D213, D402
# D105 - Missing docstring in magic method
# D200 - One-line docstring should fit on one line with quotes
# D205 - 1 blank line required between summary line and description
# D400 - First line should end with a period
add_ignore = D105, D200, D205, D400
convention = numpy
inherit = false
match = (?!test_|_version).*\.py

[tool:pytest]
testpaths = tests
